[gd_scene load_steps=6 format=3 uid="uid://bhhwsiq6npkcs"]

[ext_resource type="Script" path="res://sword.gd" id="1_wb3n2"]
[ext_resource type="Script" path="res://states/state_machine.gd" id="3_e2s51"]
[ext_resource type="Script" path="res://slash_state.gd" id="4_d7ry8"]
[ext_resource type="Script" path="res://none_state.gd" id="5_8e1xi"]
[ext_resource type="Script" path="res://spin_state.gd" id="6_o8ggk"]

[node name="Sword" type="Node2D" node_paths=PackedStringArray("stateMachine", "slashState")]
script = ExtResource("1_wb3n2")
stateMachine = NodePath("StateMachine")
slashState = NodePath("StateMachine/SlashState")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_e2s51")
initial_state = NodePath("NoneState")

[node name="SlashState" type="Node" parent="StateMachine" node_paths=PackedStringArray("sword")]
script = ExtResource("4_d7ry8")
sword = NodePath("../..")

[node name="NoneState" type="Node" parent="StateMachine"]
script = ExtResource("5_8e1xi")

[node name="SpinState" type="Node" parent="StateMachine" node_paths=PackedStringArray("sword")]
script = ExtResource("6_o8ggk")
sword = NodePath("../..")
